@@ -15,13 +15,12 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#include <clutter-gtk/gtk-clutter-embed.h>
+#include <clutter-gtk/clutter-gtk.h>
 
 namespace Clutter
 {
 namespace Gtk
 {
 
-} //namespace Gtk
-} //namespace Clutter
-
+} // namespace Gtk
+} // namespace Clutter
